# Edgar

./: .gitignore  CMakeLists.txt  README.md
include/: Aliases.hpp  ComparableString.hpp  Container.hpp  Database.hpp  DatabaseEngine.hpp  DatabaseFactory.hpp  Date.hpp  Paradigms.hpp  Query.hpp  Table.hpp  TransactionFactory.hpp  Utility.hpp
src/: Container.cpp  DatabaseEngine.cpp  Query.cpp  TransactionFactory.cpp
tests/: CMakeLists.txt  database_container.cpp  database_container_tests.cpp  database_date.cpp  database_date_tests.cpp  database_engine.cpp  database_engine_tests.cpp  database_query.cpp  database_query_tests.cpp  edgar_test.cpp
